# userBoxes

./: CMakeLists.txt  Homescreen.qml  IBox.qml  IDivider.qml  IMenuItem.qml  IText.qml  README.md  Screen2.qml  main.cpp  main.qml  network_manager.cpp  network_manager.h  qml.qrc  user_boxes.pro  userbox.cpp  userbox.hpp  userbox_model.cpp  userbox_model.hpp
